c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/switch_missing_case_value.c
int main(void) {
    switch(0) {
        case: return 0;
    }
}